style.css
body, html {
  height: 100%;
  width: 100%;
}

#animation {
  height: 100%;
  width: 100%;
}

#boy-walking img {
  height: 30%;
  position: absolute;
  bottom: -15px;
  left: 40%;
  z-index: 100;
}

#hills-1-div {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url("./art/hills 1 large.png");
  background-repeat: repeat-x;
  background-size: 100% 100%;
  height: 100%;
  z-index: 90;
}

#hills-2-div {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url("./art/hills 2 large.png");
  background-repeat: repeat-x;
  background-size: 100% 100%;
  height: 100%;
  z-index: 80;
}

#sky-div {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url("./art/sky large.png");
  background-size: 100% 100%;
  height: 100%;
  z-index: 70;
}

#clouds-1-div {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url("./art/clouds 1.png");
  background-size: 100% 100%;
  height: 100%;
  z-index: 75;
}

#clouds-2-div {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url("./art/clouds 2.png");
  background-size: 100% 100%;
  height: 100%;
  z-index: 75;
}

#audio-icon-div {
  z-index:110;
  position: absolute;
  left: 20px;
  right: 0;
  bottom: 0;
}

#audio-icon {
  height: 50px;
  opacity: 0.5;
}

